Keys are now safe

--- a/backend.ipynb
+++ b/backend.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,11 +50,9 @@
     "\n",
     "def check_weather(query: str):\n",
     "\n",
-    "    #api_cohere_key = 'BQtxZX9TZtECoTzDFkUZCwU4wu5WozhvrPtaBaxM'\n",
-    "    #api_weather = \"6a06eace0b866351ea8fdd0401993aae\"\n",
     "\n",
-    "    os.environ['COHERE_API_KEY'] = 'PKYJ9mWpadwNW8Oj44ftpOr6rKzBkzW6eT2iZhaC'\n",
-    "    os.environ[\"OPENWEATHERMAP_API_KEY\"] = \"6a06eace0b866351ea8fdd0401993aae\"\n",
+    "    COHERE_API_KEY = os.environ.get('COHERE_API_KEY')\n",
+    "    OPENWEATHERMAP_API_KEY = os.environ.get(\"OPENWEATHERMAP_API_KEY\")\n",
     "\n",
     "\n",
     "    llm = ChatCohere(model = 'command-r-plus' , temperature=0)\n",
@@ -71,8 +69,8 @@
     "\n",
     "def search_query(query : str):\n",
     "\n",
-    "    os.environ['COHERE_API_KEY'] = 'BQtxZX9TZtECoTzDFkUZCwU4wu5WozhvrPtaBaxM'\n",
-    "    os.environ['SERPAPI_API_KEY'] = 'df69a05dca9849165cb10df886f7a238d110ae22c97d2fb582390e78e2b57f1f'\n",
+    "    COHERE_API_KEY = os.environ.get('COHERE_API_KEY')\n",
+    "    SERP_API_KEY = os.environ.get(\"SERP_API_KEY\")\n",
     "\n",
     "    custom_prompt = (\n",
     "    \"You are a knowledgeable assistant. When asked about any topic, provide a detailed and comprehensive response. \"\n",
@@ -100,19 +98,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\dell\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\langchain_core\\_api\\deprecation.py:119: LangChainDeprecationWarning: The function `initialize_agent` was deprecated in LangChain 0.1.0 and will be removed in 0.3.0. Use Use new agent constructor methods like create_react_agent, create_json_agent, create_structured_chat_agent, etc. instead.\n",
-      "  warn_deprecated(\n",
-      "C:\\Users\\dell\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\langchain_core\\_api\\deprecation.py:119: LangChainDeprecationWarning: The method `Chain.run` was deprecated in langchain 0.1.0 and will be removed in 0.3.0. Use invoke instead.\n",
-      "  warn_deprecated(\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -120,14 +108,14 @@
       "\n",
       "\n",
       "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
-      "\u001b[32;1m\u001b[1;3mThought: To answer this question, I will search for \"what is GDP\".\n",
+      "\u001b[32;1m\u001b[1;3mThought: To answer this question, I will search for \"what is GDP.\"\n",
       "Action: Search\n",
       "Action Input: what is GDP\n",
       "Observation:\u001b[0m\n",
-      "Observation: \u001b[36;1m\u001b[1;3m['Measuring GDP. GDP measures the monetary value of final goods and services—that is, those that are bought by the final user—produced in a country in ...', 'Another way to measure GDP is as the sum of four factors: consumer spending, government spending, net exports, and total investment. In the United States, GDP ...', 'GDP is the way we measure the U.S. economy and its growth. GDP = the total market value of the final goods and services produced within the United States in ...', \"Gross domestic product tracks the health of a country's economy. · It represents the value of all goods and services produced over a specific time period within ...\", \"Gross domestic product (GDP) is an important tool for measuring how a country's economy is doing. It lets governments work out how much they ...\", 'The nation\\'s gross domestic product totals trillions of dollars. Most often, the number you\\'ll hear people refer to as \"GDP\" is a percentage.', 'In very simple terms, GDP measures how much is produced, how much is spent and how much is earned in the economy over a given period and, also, ...', 'Gross Domestic Product (GDP) is a monetary measure of the market value of all the final goods and services produced and rendered in a specific time period ...', 'Gross domestic product (GDP) is the standard measure of the value added created through the production of goods and services in a country during a certain ...']\u001b[0m\n",
+      "Observation: \u001b[36;1m\u001b[1;3m['Measuring GDP. GDP measures the monetary value of final goods and services—that is, those that are bought by the final user—produced in a country in ...', 'Another way to measure GDP is as the sum of four factors: consumer spending, government spending, net exports, and total investment.', \"Gross domestic product tracks the health of a country's economy. · It represents the value of all goods and services produced over a specific time period within ...\", \"Gross domestic product (GDP) is an important tool for measuring how a country's economy is doing. It lets governments work out how much they ...\", 'GDP is the way we measure the U.S. economy and its growth. GDP = the total market value of the final goods and services produced within the United States in ...', 'In very simple terms, GDP measures how much is produced, how much is spent and how much is earned in the economy over a given period and, also, ...', 'The nation\\'s gross domestic product totals trillions of dollars. Most often, the number you\\'ll hear people refer to as \"GDP\" is a percentage.', 'Gross Domestic Product (GDP) is a monetary measure of the market value of all the final goods and services produced and rendered in a specific time period ...', 'Gross domestic product (GDP) is the standard measure of the value added created through the production of goods and services in a country during a certain ...']\u001b[0m\n",
       "Thought:\u001b[32;1m\u001b[1;3mI now know the final answer.\n",
       "\n",
-      "Final Answer: GDP stands for Gross Domestic Product and is a measure of the market value of all the final goods and services produced in a country during a specific time period, usually a year. It is used to gauge the health and growth of a country's economy.\u001b[0m\n",
+      "Final Answer: GDP stands for Gross Domestic Product and is a monetary measurement of the market value of all goods and services produced in a country during a specific time period. It is used to track the health and growth of a country's economy.\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n"
      ]
@@ -135,10 +123,10 @@
     {
      "data": {
       "text/plain": [
-       "\"GDP stands for Gross Domestic Product and is a measure of the market value of all the final goods and services produced in a country during a specific time period, usually a year. It is used to gauge the health and growth of a country's economy.\""
+       "\"GDP stands for Gross Domestic Product and is a monetary measurement of the market value of all goods and services produced in a country during a specific time period. It is used to track the health and growth of a country's economy.\""
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,15 +146,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "def search_query(query_request: str):\n",
     "    query = query_request\n",
     "\n",
-    "    os.environ['COHERE_API_KEY'] = 'PKYJ9mWpadwNW8Oj44ftpOr6rKzBkzW6eT2iZhaC'\n",
-    "    os.environ['SERP_API_KEY'] = '73ce724cbce1469407bd4191a7b7c54aba5366019305d9f0f05f61791404f023'\n",
+    "    COHERE_API_KEY = os.environ.get('COHERE_API_KEY')\n",
+    "    SERP_API_KEY = os.environ.get(\"SERP_API_KEY\")\n",
     "\n",
     "    custom_prompt = (\n",
     "    \"You are a knowledgeable assistant. When asked about any topic, provide a detailed and comprehensive response. \"\n",
@@ -191,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -201,13 +189,13 @@
       "\n",
       "\n",
       "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
-      "\u001b[32;1m\u001b[1;3mThought: To answer this question, I will search for \"who is barack obama\".\n",
+      "\u001b[32;1m\u001b[1;3mThought: To answer this question, I will search for \"Barak Obama.\"\n",
       "Action: Search\n",
-      "Action Input: who is barack obama\n",
+      "Action Input: Barak Obama\n",
       "Observation:\u001b[0m\n",
-      "Observation: \u001b[36;1m\u001b[1;3m['Barack Obama served as the 44th President of the United States. His story is the American story — values from the heartland, a middle-class upbringing in a ...', 'Obama was elected the first African-American president of the Harvard Law Review, prior to graduating magna cum laude in 1991. He returned to Chicago in 1992 ...', 'Barack Obama (born August 4, 1961, Honolulu, Hawaii, U.S.) is the 44th president of the United States (2009–17) and the first African ...', \"Vice President, Members of Congress, my fellow Americans: Tonight marks the eighth year that I've come here to report on the State of the Union.\", 'Former U.S. President Barack Obama delivered a keynote address about how information is created and consumed, and the threat that disinformation ...', 'Obama worked as a community organizer in Chicago, where he met and married Michelle LaVaughn Robinson in 1992. Their two daughters, Malia Ann and Natasha (Sasha) ...', 'Barack Obama is the 44th President of the United States. His story is the American story -- values from the heartland, a middle-class upbringing in a strong ...', 'Barack Obama. 56129127 likes · 347203 talking about this. Dad, husband, former President, citizen.', \"A Democrat, Obama became the first African American to run for president on a major political party's ticket. He then went on to become the first African ...\", 'OBAMA OBSERVATIONS. President Barack Obama speaks during a ceremony at the Pentagon Memorial, Sept. 11, 2010, to mark the ninth anniversary of the Sept.']\u001b[0m\n",
-      "Thought:\u001b[32;1m\u001b[1;3mThought: I now know that Barack Obama was the 44th President of the United States and the first African-American to hold that office. He served from 2009 to 2017. Before becoming president, he worked as a community organizer in Chicago and graduated from Harvard Law School.\n",
-      "Final Answer: Barack Obama was the 44th President of the United States and the first African-American to hold that office. He served from 2009 to 2017. Before his presidency, he worked as a community organizer in Chicago and graduated from Harvard Law School, where he was elected the first African-American president of the Harvard Law Review.\u001b[0m\n",
+      "Observation: \u001b[36;1m\u001b[1;3m[\"Speaker, Mr. Vice President, Members of Congress, my fellow Americans: Tonight marks the eighth year that I've come here to report on the State ...\", 'During a speech at Stanford University on Thursday, former U.S. President Barack Obama presented his audience with a stark choice: “Do we allow ...', 'The biography for President Obama and past presidents is courtesy of the White House Historical Association. Barack Obama served as the 44th President of ...', 'It was the spring of 2008 and Barack Obama was running for president. Many of us wondered if America was ready to elect an African-American ...', 'As his time in office comes to a close, President Obama will return to Chicago to deliver his Farewell Address on the evening of January 10, ...', 'Barack Obama, the 44th president, faced First Amendment issues on corporate campaign speech and religious rights during his presidency.', 'Before reading a brief autobiographical sharing taken from a “Back-to-school” speech, a highly ritualized monolog the US President addresses ...', 'Barack Hussein Obama II was born August 4, 1961, in Honolulu, Hawaii, to parents Barack H. Obama, Sr., and Stanley Ann Dunham. His parents divorced when he ...', 'In a recent interview with student reporter, Damon Weaver, President Obama announced that on September 8 -- the first day of school for many children across ...']\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3mThought: From the search results, I can see that Barack Obama was the 44th President of the United States.\n",
+      "Final Answer: Barack Hussein Obama II, commonly known as Barack Obama, was the 44th President of the United States. He was born on August 4, 1961, in Honolulu, Hawaii, to parents Barack H. Obama, Sr., and Stanley Ann Dunham.\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n"
      ]
@@ -215,10 +203,10 @@
     {
      "data": {
       "text/plain": [
-       "{'result': 'Barack Obama was the 44th President of the United States and the first African-American to hold that office. He served from 2009 to 2017. Before his presidency, he worked as a community organizer in Chicago and graduated from Harvard Law School, where he was elected the first African-American president of the Harvard Law Review.'}"
+       "{'result': 'Barack Hussein Obama II, commonly known as Barack Obama, was the 44th President of the United States. He was born on August 4, 1961, in Honolulu, Hawaii, to parents Barack H. Obama, Sr., and Stanley Ann Dunham.'}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
